# mcp_sse

./: .gitignore  README.md  scripts.sh
a2a/airbnb_planner_multiagent/: .env.sample  Dockerfile  Dockerfile.agent  Instructions.txt  pyproject.toml
a2a/airbnb_planner_multiagent/airbnb_agent/: Dockerfile  __main__.py  agent_executor.py
a2a/airbnb_planner_multiagent/client_airbnb_agent/: Instructions.txt  simple_client.py
a2a/airbnb_planner_multiagent/host_agent/: routing_agent.py
a2a/langgraph/: Instructions.txt  pyproject.toml
airbnb_planner_multiagent/airbnb_agent/: __main__.py  agent_executor.py  airbnb_agent.py
airbnb_planner_multiagent/host_agent/: __main__.py  remote_agent_connection.py
airbnb_planner_multiagent/weather_agent/: weather_executor.py
goog-adk-mcp-agents/: Instructions.txt
goog-adk-mcp-agents/agentclientmcp/: pyproject.toml
goog-adk-mcp-agents/wikiservermcp/: pyproject.toml  run.py  server.py
mcpworks/: Instructions.txt  README.md  main_sse.py  main_stdio.py  pyproject.toml  research_server.py
mcpworks/test/: test_mcp_query.py
mcpworks/tools/: csv_tools.py  parquet_tools.py  research_tools.py  sqllite_explorer.py
mcpworks/utils/: file_reader.py
streamhttp/: Instructions.txt
streamhttp/server/: pyproject.toml  run.py  server.py
streamhttp/server/agent/: sqlite_agent.py
streamhttp/server/data/: create_db.py  sqlite.db
streamhttp/server/tools/: sqlite_explorer.py  weather.py
streamhttp/server/utils/: memory.py
supergateway/: Instructions.txt
supergateway/server_supergateway/: server.sh
(+16 files in other folders)
